--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@babel/preset-react": "^7.22.15",
     "babel-loader": "^9.1.3",
     "cross-env": "^7.0.3",
+    "css-loader": "^6.8.1",
     "electron": "^27.0.0",
+    "style-loader": "^3.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   },
