--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
-  
   "scripts": {
     "start": "cross-env NODE_ENV=development electron .",
     "build": "webpack --mode production",
@@ -27,6 +26,7 @@
   },
   "dependencies": {
     "electron-reload": "^2.0.0-alpha.1",
+    "nedb": "^1.8.0",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
